[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mc-check"
version = "1.0.5"
description = "CLI tool to check Minecraft server status using the mcsrvstat.us API"
authors = [
    {name = "Dmitrii Orlovski", email = "alvaniss1g@gmail.com"},
]
license = {text = "GPL-3.0"}
dependencies = ["requests"]
requires-python = ">=3.6"

long_description = {file = "README.md"}
long_description_content_type = "text/markdown"

[project.scripts]
mc-check = "mc_check:main"

[tool.setuptools.package_data]
mc-check = ["README.md"]

[tool.setuptools.sdist]
include = ["README.md"]
